lab 2/objects/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx
    tier: frontend
    env: dev
spec:
  containers:
    - name: my-container
      image: nginx:1.19.10
      ports:
        - containerPort: 80
