lab 2/objects/pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.2
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            name: web
            protocol: TCP
        volumeMounts:
          - name: nginx-data
            mountPath: /demo/nginx
      volumes:
        - name: nginx-data
          persistentVolumeClaim:
            claimName: nginx-data-pvc
