lab 2/objects/secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-pod
    env: dev
spec:
  containers:
    - name: my-container
      image: nginx:1.19.10
      ports:
        - containerPort: 80
      volumeMounts:
      - name: demo
        mountPath: "/etc/demo"
        readOnly: true
  volumes:
  - name: demo
    secret:
      secretName: database-secret
